main.tf
terraform {
  required_version = ">= 0.11"
}
provider "aws" {
  region = var.aws_region
}
locals {
  availability_zones = split(",", var.availability_zones)
}
resource "aws_elb" "web-elb" {
  name               = "terraform-example-elb"
  availability_zones = local.availability_zones
  listener {
    instance_port     = 80
    instance_protocol = "http"
    lb_port           = 80
    lb_protocol       = "http"
  }
  health_check {
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 3
    target              = "HTTP:80/"
    interval            = 30
  }
}
resource "aws_autoscaling_group" "web-asg" {
  availability_zones = local.availability_zones
  name               = "terraform-example-asg"
  max_size           = var.asg_max
  min_size           = var.asg_min
  desired_capacity   = var.asg_desired
  force_delete       = true
  launch_template {
    id      = aws_launch_template.web_template.id
    version = "$Latest"
  }
  load_balancers = [aws_elb.web-elb.name]
  tag {
    key                 = "Name"
    value               = "web-asg"
    propagate_at_launch = "true"
  }
}
resource "aws_launch_template" "web_template" {
  name          = "conc-web-tmpl"
  instance_type = var.instance_type
  key_name      = var.key_name
  image_id      = data.aws_ami.ubuntu_ami.id
  vpc_security_group_ids = [
    aws_security_group.default.id
  ]
  user_data = base64encode(file("userdata.sh"))
}
resource "aws_security_group" "default" {
  name        = "terraform_example_sg"
  description = "Used in the terraform"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
